Allow separate hostname for websocket, and fix missing space

--- a/guess-whom.conf
+++ b/guess-whom.conf
@@ -1,5 +1,6 @@
 {
     host => 'mojolicious-dev:3000',
+    ws_host => 'mojolicious-dev:3000',
     passphrase => 'casio dell sarsons malt vinegar 2109',
     db => 'guess-whom.db',
 }
