Warn if the config file needs touching

--- a/guess-whom.conf
+++ b/guess-whom.conf
@@ -1,6 +1,9 @@
 {
     host => 'mojolicious-dev:3000',
     ws_host => 'mojolicious-dev:3000',
-    passphrase => 'casio dell sarsons malt vinegar 2109',
+    passphrase => 'DEFAULT',
     db => 'guess-whom.db',
 }
+
+# After configuring, don't forget to create the public/face/ directory and
+# make it writable by the guess-whom user
